--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -8,21 +8,21 @@
 conky.config = {
     maximum_width = 350,
     top_name_width = 10,
-    alignment = 'tr',
+    alignment = 'br',
     background = true,
     border_width = 1,
     cpu_avg_samples = 4,
-    default_color = 'black',
-    default_outline_color = '#213784',
-    default_shade_color = 'white',
-    color1 = 'white',
+    default_color = 'white',
+    default_outline_color = '#0a060b',
+    default_shade_color = '#dec4a3',
+    color1 = '#8e4b2b',
     double_buffer = true,
     draw_borders = false,
     draw_graph_borders = false,
     draw_outline = true,
     draw_shades = true,
     extra_newline = false,
-    font = 'TerminessTTF Nerd Font Mono Medium:size=10',
+    font = 'TerminessTTF Nerd Font Medium :size=12',
     gap_x = 30,
     gap_y = 30,
     net_avg_samples = 2,
