--- a/i3/config
+++ b/i3/config
@@ -1,97 +1,90 @@
-#
+##  _   _       _   _
+## | \ | |     | | | |
+## |  \| | ___ | |_| | ___   _ _ __ ___   __ _ _ __   ___
+## | . ` |/ _ \| __| |/ / | | | '_ ` _ \ / _` | '_ \ / _ \
+## | |\  | (_) | |_|   <| |_| | | | | | | (_| | | | |  __/
+## |_| \_|\___/ \__|_|\_\\__,_|_| |_| |_|\__,_|_| |_|\___|
+#i3-Gaps Config.
+
+
+#Modkey
 set $mod Mod4
+
+#Splits
+bindsym $mod+x split h
+bindsym $mod+z split v
+
+#Gaps
+for_window [class=".*"] border pixel 2
+smart_gaps on
+smart_borders on
+gaps inner 8
+gaps outer 4
+
+#Some Launchers
+#Browser#
 bindsym $mod+w exec "$BROWSER"
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-#font Ubuntu Nerd Font Mono 12
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango:DejaVu Sans Mono 8
-
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
-exec --no-startup-id dex --autostart --environment i3
-
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
-# Use pactl to adjust volume in PulseAudio.
-#
-#
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# start a terminal
+bindsym $mod+Shift+w exec brave --incognito
+#Terminal#
 bindsym $mod+Return exec "$TERMINAL"
 bindsym $mod+Shift+Return exec xfce4-terminal --drop-down
+#Rofi#
+bindsym $mod+d exec "~/Scripts/rofi.sh"
+bindsym $mod+Shift+d exec rofi -show p -modi p:rofi-power-menu 
+#Font Thingy
+font pango:monospace 8
 
-# kill focused window
+#Media Keys
+bindsym XF86Explorer exec thunar
+bindsym XF86HomePage exec "$BROWSER"
+bindsym XF86AudioStop exec playerctl stop
+bindsym XF86AudioPlay exec playerctl play-pause
+
+#Use Mouse+$mod to drag floating windows
+floating_modifier $mod
+
+#Kill
 bindsym $mod+q kill
 
-# A more modern dmenu replacement is rofi:
-bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-
-# change focus
+#Change Focus
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-bindsym $mod+Ctrl+Left resize shrink width 10 px or 10 ppt
+#Resize
+bindsym $mod+Ctrl+Right resize shrink width 10 px or 10 ppt
 bindsym $mod+Ctrl+Up resize grow height 10 px or 10 ppt
 bindsym $mod+Ctrl+Down resize shrink height 10 px or 10 ppt
-bindsym $mod+Ctrl+Right resize grow width 10 px or 10 ppt
+bindsym $mod+Ctrl+Left resize grow width 10 px or 10 ppt
 
-# move focused window
+#Move Focused
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-# enter fullscreen mode for the focused container
+
+#Fullscreen
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+x layout tabbed
-bindsym $mod+z layout toggle split
-
-# split in horizontal orientation
-bindsym $mod+c split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# toggle tiling / floating
+#Toggle tiling / floating
 bindsym $mod+Shift+f floating toggle
 
-# change focus between tiling / floating windows
+#Change focus between floating
 bindsym $mod+space focus mode_toggle
 
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
+#Workspaces
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
+set $ws4 "5"
+set $ws5 "6"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-# switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -103,9 +96,17 @@ bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
-bindsym $mod+Tab workspace next
+workspace 1 output primary
+workspace 2 output VGA-0
+workspace 3 output primary
+workspace 4 output VGA-0
+workspace 5 output primary
+workspace 6 output VGA-0
+workspace 7 output primary
+workspace 8 output VGA-0
+workspace 9 output primary
+workspace 10 output VGA-0
 
-# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -117,36 +118,22 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
-# reload the configuration file
+bindsym $mod+Tab workspace next
+
+#Reload Config
 bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-# class                 
-for_window [class=".*"] border pixel 2
-smart_gaps on
-smart_borders on
-gaps inner 12
-
-#control transparency
-bindsym $mod+a exec --no-startup-id picom-trans -c -10
-bindsym $mod+s exec --no-startup-id picom-trans -c +10
-
-# Set colors from Xresources
+#Set colors from Xresources
 set_from_resource $fg i3wm.color7 #f0f0f0
 set_from_resource $bg i3wm.color2 #f0f0f0
 
 # class                 border  backgr. text indicator child_border
 client.focused          $bg     $bg     $fg  $bg       $bg
 client.focused_inactive $bg     $bg     $fg  $bg       $bg
-#client.unfocused        $bg     $bg     $fg  $bg       $bg
 client.urgent           $bg     $bg     $fg  $bg       $bg
 client.placeholder      $bg     $bg     $fg  $bg       $bg
-
 client.background       $bg
 
-#start xfce4 panel
+#xfce4-panel
 exec --no-startup-id xfce4-panel --disable-wm-check
 
