--- a/i3/config
+++ b/i3/config
@@ -71,7 +71,7 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+Shift+f floating toggle
 
 #Change focus between floating
-bindsym $mod+space focus mode_toggle
+#bindsym $mod+space focus mode_toggle
 
 #Workspaces
 set $ws1 "1"
@@ -95,17 +95,6 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-
-workspace 1 output primary
-workspace 2 output VGA-0
-workspace 3 output primary
-workspace 4 output VGA-0
-workspace 5 output primary
-workspace 6 output VGA-0
-workspace 7 output primary
-workspace 8 output VGA-0
-workspace 9 output primary
-workspace 10 output VGA-0
 
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
