--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -8,16 +8,16 @@ conky.config = {
     default_color = 'white',
     default_outline_color = '#0a060b',
     default_shade_color = '#dec4a3',
-    color1 = '#8e4b2b',
+    color1 = 'e06aeb',
     double_buffer = true,
     draw_borders = false,
     draw_graph_borders = false,
     draw_outline = true,
     draw_shades = true,
     extra_newline = false,
-    font = 'TerminessTTF Nerd Font Medium :size=12',
-    gap_x = 30,
-    gap_y = 30,
+    font = 'TerminessTTF Nerd Font :size=14',
+    gap_x = 20,
+    gap_y = 10,
     net_avg_samples = 2,
     no_buffers = true,
     out_to_console = false,
@@ -41,10 +41,10 @@ conky.config = {
 }
 
 conky.text = [[
-${color1}${font ConkySymbols:size=35}t${font} ${voffset -10}${color}System»${color1} $hr ${color}
+${color1}${font ConkySymbols:size=40}t${font} ${voffset -10}${color}System»${color1} $hr ${color}
 
-${alignc}${font TerminessTTF Nerd Font Mono Bold :size=20}${time %H:%M}${font}
-${alignc}${font TerminessTTF Nerd Font Mono Bold :size=15}${time %d.%m.%y %A}${font}
+${alignc}${font ProFontWindows Nerd Font :size=25}${time %H:%M}${font}
+${alignc}${font ProfontWindows Nerd Font Mono :size=20}${time %d.%m.%y %A}${font}
 
 ${color1}${goto 10}OS : ${color}${execi 86400 cat `ls -atr /etc/*-release | tail -2` | grep "PRETTY_NAME" | cut -d= -f2 |  sed 's/"//g'}
 
@@ -52,21 +52,4 @@ ${color1}${goto 10}Kernel : ${color}$kernel on $machine
 ${color1}${goto 10}Uptime : ${color}$uptime_short
 
 ${color1}$hr${color1}
-${color1}${font ConkySymbols:size=20}k${font} ${voffset -10}${color}Storage»${color1} $hr${color}
-
-${color1}${goto 10}ROOT : ${color}/dev/nvme0n1p3
-${color1}${goto 10}Used : ${color}${fs_used /}/${fs_size /}
-${color1}$hr${color1}
-${color1}${font ConkySymbols:size=20}J${font} ${voffset -10}${color}Memory»${color1} $hr${color}
-
-${color1}${goto 10}RAM : ${color}$mem/$memmax
-${color1}${goto 10}SWAP: ${color}$swap/$swapmax
-${color1}$hr${color1}
-${color1}${font ConkySymbols:size=20}b${font} ${voffset -10}${color}Network»${color1} $hr${color}
-
-${color1}${goto 10}Download : ${color}${downspeed enp0s31f6}
-${color1}${goto 10}Upload : ${color}${upspeed enp0s31f6}
-${color1}${goto 10}Local Adress : ${color}${addrs enp0s31f6}
-${color1}$hr${color1}
-
 ]]
