--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -8,7 +8,7 @@ conky.config = {
     default_color = 'white',
     default_outline_color = '#0a060b',
     default_shade_color = '#dec4a3',
-    color1 = 'e06aeb',
+    color1 = 'ac8d6d',
     double_buffer = true,
     draw_borders = false,
     draw_graph_borders = false,
@@ -41,7 +41,7 @@ conky.config = {
 }
 
 conky.text = [[
-${color1}${font ConkySymbols:size=40}t${font} ${voffset -10}${color}System»${color1} $hr ${color}
+${color1}${font ConkySymbols:size=40}t${font} ${voffset -10}${color}System» ${cpu cpu}%${color1} $hr ${color}
 
 ${alignc}${font ProFontWindows Nerd Font :size=25}${time %H:%M}${font}
 ${alignc}${font ProfontWindows Nerd Font Mono :size=20}${time %d.%m.%y %A}${font}
@@ -50,6 +50,12 @@ ${color1}${goto 10}OS : ${color}${execi 86400 cat `ls -atr /etc/*-release | tail
 
 ${color1}${goto 10}Kernel : ${color}$kernel on $machine
 ${color1}${goto 10}Uptime : ${color}$uptime_short
+
+${color1}${goto 10}Root : ${color}${fs_used /} / ${fs_size /}
+
+${color1}${goto 10}Memory : ${color}$mem / $memmax
+${color1}${goto 10}SWAP : ${color}$swap / $swapmax
+${color1}${goto 10}Top Process : ${color}${top name 1}
 
 ${color1}$hr${color1}
 ]]
