--- a/i3/config
+++ b/i3/config
@@ -12,19 +12,17 @@ bindsym $mod+z split v
 for_window [class=".*"] border pixel 2
 smart_gaps on
 smart_borders on
-gaps inner 8
-gaps outer 6
+gaps inner 6
+gaps outer 4
 
-#Some Launchers
-#Browser#
+#Browser
 bindsym $mod+w exec "$BROWSER"
 bindsym $mod+Shift+w exec brave --incognito
-#Terminal#
+#Terminal
 bindsym $mod+Return exec "$TERMINAL"
 bindsym $mod+Shift+Return exec xfce4-terminal --drop-down
-#Rofi#
-bindsym $mod+d exec "~/.config/rofi/launchers/misc/launcher.sh"
-bindsym $mod+Shift+Escape exec poweroff
+#"start" menu
+bindsym $mod+d exec xfce4-popup-whiskermenu
 #Font Thingy
 font pango:monospace 8
 
