--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -7,13 +7,13 @@ conky.config = {
     cpu_avg_samples = 4,
     default_color = 'white',
     default_outline_color = '#0a060b',
-    default_shade_color = '#dec4a3',
+    default_shade_color = 'white',
     color1 = 'ac8d6d',
     double_buffer = true,
     draw_borders = false,
     draw_graph_borders = false,
     draw_outline = true,
-    draw_shades = true,
+    draw_shades = false,
     extra_newline = false,
     font = 'TerminessTTF Nerd Font :size=14',
     gap_x = 20,
@@ -41,21 +41,15 @@ conky.config = {
 }
 
 conky.text = [[
-${color1}${font ConkySymbols:size=40}t${font} ${voffset -10}${color}System» ${cpu cpu}%${color1} $hr ${color}
+${color1}${font ConkySymbols:size=40}T${font} ${voffset -10}${color}System» ${color1}$hr ${color}
 
-${alignc}${font ProFontWindows Nerd Font :size=25}${time %H:%M}${font}
-${alignc}${font ProfontWindows Nerd Font Mono :size=20}${time %d.%m.%y %A}${font}
-
-${color1}${goto 10}OS : ${color}${execi 86400 cat `ls -atr /etc/*-release | tail -2` | grep "PRETTY_NAME" | cut -d= -f2 |  sed 's/"//g'}
-
-${color1}${goto 10}Kernel : ${color}$kernel on $machine
-${color1}${goto 10}Uptime : ${color}$uptime_short
-
-${color1}${goto 10}Root : ${color}${fs_used /} / ${fs_size /}
-
-${color1}${goto 10}Memory : ${color}$mem / $memmax
-${color1}${goto 10}SWAP : ${color}$swap / $swapmax
-${color1}${goto 10}Top Process : ${color}${top name 1}
-
+${color1}${goto 10}Time:${color}${time %H:%M}
+${color1}${goto 10}Date:${color}${time %d.%m.%y %A}
+${color1}${goto 10}Uptime:${color}$uptime_short
+${color1}${goto 10}Kernel:${color}$kernel on $machine
+#${color1}${goto 10}Memory:${color}$mem / $memmax
+#${color1}${goto 10}SWAP:${color}$swap / $swapmax
+#${color1}${goto 10}Top Process:${color}${top name 1}
+#${color1}${goto 10}Root:${color}${fs_used /} / ${fs_size /}
 ${color1}$hr${color1}
 ]]
