--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -8,7 +8,7 @@ conky.config = {
     default_color = 'white',
     default_outline_color = '#0a060b',
     default_shade_color = 'white',
-    color1 = 'ac8d6d',
+    color1 = '963690',
     double_buffer = true,
     draw_borders = false,
     draw_graph_borders = false,
