--- a/i3/config
+++ b/i3/config
@@ -3,17 +3,19 @@
 
 #Modkey
 set $mod Mod4
-
+#Scratchpad
+bindsym $mod+c move scratchpad 
+bindsym $mod+v scratchpad show
 #Splits
 bindsym $mod+x split h
 bindsym $mod+z split v
 
 #Gaps
 for_window [class=".*"] border pixel 2
-smart_gaps on
+border_radius 0
 smart_borders on
-gaps inner 6
-gaps outer 4
+smart_gaps on
+gaps inner 4
 
 #Browser
 bindsym $mod+w exec "$BROWSER"
@@ -24,7 +26,7 @@ bindsym $mod+Shift+Return exec xfce4-terminal --drop-down
 #"start" menu
 bindsym $mod+d exec xfce4-popup-whiskermenu
 #Font Thingy
-font pango:monospace 8
+font pango:ProFontWindows Nerd Font 14
 
 #Media Keys
 bindsym XF86Explorer exec thunar
@@ -70,8 +72,8 @@ bindsym $mod+space focus mode_toggle
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
-set $ws4 "5"
-set $ws5 "6"
+set $ws4 "4"
+set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
@@ -116,6 +118,7 @@ client.urgent           $bg     $bg     $fg  $bg       $bg
 client.placeholder      $bg     $bg     $fg  $bg       $bg
 client.background       $bg
 
-#xfce4-panel
+#xfce4-panel / Toggle panel
+bindsym $mod+b exec pgrep xfce4-panel && xfce4-panel -q || xfce4-panel --disable-wm-check
 exec --no-startup-id xfce4-panel --disable-wm-check
-
+exec_always --no-startup-id autotiling
