--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,7 @@
 #i3-Gaps Config.
-
-
+bindsym $mod+Shift+q exec i3-msg exit
+bindsym $mod+Shift+e exec i3-msg restart
+bindsym $mod+Shift+c reload
 #Modkey
 set $mod Mod4
 #Scratchpad
@@ -9,14 +10,12 @@ bindsym $mod+v scratchpad show
 #Splits
 bindsym $mod+x split h
 bindsym $mod+z split v
-
 #Gaps
-for_window [class=".*"] border pixel 2
-border_radius 0
+#for_window [class=".*"] border pixel 4
+#border_radius 0
 smart_borders on
 smart_gaps on
 gaps inner 4
-
 #Browser
 bindsym $mod+w exec "$BROWSER"
 bindsym $mod+Shift+w exec brave --incognito
@@ -26,48 +25,38 @@ bindsym $mod+Shift+Return exec xfce4-terminal --drop-down
 #"start" menu
 bindsym $mod+d exec xfce4-popup-whiskermenu
 #Font Thingy
-font pango:ProFontWindows Nerd Font 14
-
+font pango:Cascadia Code 14
 #Media Keys
 bindsym XF86Explorer exec thunar
 bindsym XF86HomePage exec "$BROWSER"
 bindsym XF86AudioStop exec playerctl stop
 bindsym XF86AudioPlay exec playerctl play-pause
 bindsym XF86Mail exec $BROWSER https://www.google.com/gmail/
-
 #Use Mouse+$mod to drag floating windows
 floating_modifier $mod
-
 #Kill
 bindsym $mod+q kill
-
 #Change Focus
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
 #Resize
 bindsym $mod+Ctrl+Right resize shrink width 10 px or 10 ppt
 bindsym $mod+Ctrl+Up resize grow height 10 px or 10 ppt
 bindsym $mod+Ctrl+Down resize shrink height 10 px or 10 ppt
 bindsym $mod+Ctrl+Left resize grow width 10 px or 10 ppt
-
 #Move Focused
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
 #Fullscreen
 bindsym $mod+Shift+f fullscreen toggle
-
 #Toggle tiling / floating
 bindsym $mod+f floating toggle
-
 #Change focus between floating
 bindsym $mod+space focus mode_toggle
-
 #Workspaces
 set $ws1 "1"
 set $ws2 "2"
@@ -79,7 +68,6 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
-
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -90,7 +78,6 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -101,23 +88,7 @@ bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
-
 bindsym $mod+Tab workspace next
-
-#Reload Config
-bindsym $mod+Shift+c reload
-
-#Set colors from Xresources
-set_from_resource $fg i3wm.color7 #f0f0f0
-set_from_resource $bg i3wm.color2 #f0f0f0
-
-# class                 border  backgr. text indicator child_border
-client.focused          $bg     $bg     $fg  $bg       $bg
-client.focused_inactive $bg     $bg     $fg  $bg       $bg
-client.urgent           $bg     $bg     $fg  $bg       $bg
-client.placeholder      $bg     $bg     $fg  $bg       $bg
-client.background       $bg
-
 #xfce4-panel / Toggle panel
 bindsym $mod+b exec pgrep xfce4-panel && xfce4-panel -q || xfce4-panel --disable-wm-check
 exec --no-startup-id xfce4-panel --disable-wm-check
