--- a/xfce4/panel/whiskermenu-4.rc
+++ b/xfce4/panel/whiskermenu-4.rc
@@ -1,5 +1,5 @@
 favorites=brave-browser.desktop,Runelite.desktop,net.lutris.guild-wars-2-3.desktop,steam.desktop,steam-game.desktop,net.lutris.Lutris.desktop,net.lutris.path-of-building-2.desktop,PCSX2.desktop,discord.desktop,spotify.desktop,github-desktop.desktop,onboard.desktop
-recent=github-desktop.desktop,virtualbox.desktop,steam.desktop,net.lutris.Lutris.desktop,nitrogen.desktop,arandr.desktop,net.lutris.path-of-building-2.desktop,discord.desktop,spotify.desktop,Runelite.desktop,xfce-ui-settings.desktop,xfce-settings-manager.desktop,runelite.desktop,xterm.desktop,stacer.desktop
+recent=github-desktop.desktop,virtualbox.desktop,spotify.desktop,steam.desktop,net.lutris.Lutris.desktop,nitrogen.desktop,arandr.desktop,net.lutris.path-of-building-2.desktop,discord.desktop,Runelite.desktop,xfce-ui-settings.desktop,xfce-settings-manager.desktop,runelite.desktop,xterm.desktop,stacer.desktop
 button-title=Start\ 
 button-icon=/home/notkumane/Scripts/start.png
 button-single-row=false
@@ -11,20 +11,20 @@ launcher-show-tooltip=false
 launcher-icon-size=1
 hover-switch-category=false
 category-show-name=true
-category-icon-size=0
+category-icon-size=-1
 sort-categories=true
 view-mode=1
 default-category=0
 recent-items-max=15
 favorites-in-recent=false
-position-search-alternate=false
-position-commands-alternate=false
+position-search-alternate=true
+position-commands-alternate=true
 position-categories-alternate=false
-position-categories-horizontal=true
+position-categories-horizontal=false
 stay-on-focus-out=false
-profile-shape=1
+profile-shape=2
 confirm-session-command=true
-menu-width=450
+menu-width=455
 menu-height=500
 menu-opacity=90
 command-settings=xfce4-settings-manager
@@ -35,9 +35,9 @@ command-switchuser=dm-tool switch-to-greeter
 show-command-switchuser=false
 command-logoutuser=i3-msg exit
 show-command-logoutuser=true
-command-restart=reboot
+command-restart=sudo reboot
 show-command-restart=true
-command-shutdown=poweroff
+command-shutdown=sudo poweroff
 show-command-shutdown=true
 command-suspend=xfce4-session-logout --suspend
 show-command-suspend=false
@@ -48,7 +48,7 @@ show-command-logout=false
 command-menueditor=menulibre
 show-command-menueditor=false
 command-profile=mugshot
-show-command-profile=true
+show-command-profile=false
 search-actions=6
 
 [action0]
