--- a/xfce4/panel/whiskermenu-4.rc
+++ b/xfce4/panel/whiskermenu-4.rc
@@ -1,7 +1,7 @@
-favorites=brave-browser.desktop,Runelite.desktop,net.lutris.guild-wars-2-3.desktop,steam.desktop,steam-game.desktop,net.lutris.Lutris.desktop,net.lutris.path-of-building-2.desktop,PCSX2.desktop,discord.desktop,spotify.desktop,github-desktop.desktop,onboard.desktop
-recent=github-desktop.desktop,virtualbox.desktop,spotify.desktop,steam.desktop,net.lutris.Lutris.desktop,nitrogen.desktop,arandr.desktop,net.lutris.path-of-building-2.desktop,discord.desktop,Runelite.desktop,xfce-ui-settings.desktop,xfce-settings-manager.desktop,runelite.desktop,xterm.desktop,stacer.desktop
-button-title=Start\ 
-button-icon=/home/notkumane/Scripts/start.png
+favorites=brave-browser.desktop,steam.desktop,net.lutris.Lutris.desktop,discord.desktop,spotify.desktop,net.lutris.guild-wars-2-1.desktop,Path of Exile.desktop,net.lutris.path-of-building-2.desktop,net.lutris.genshin-impact-3.desktop,github-desktop.desktop
+recent=org.gnome.DiskUtility.desktop,google-chrome.desktop,net.lutris.guild-wars-2-1.desktop,steam.desktop,net.lutris.Lutris.desktop,spotify.desktop,lxappearance.desktop,nitrogen.desktop,org.gnome.Screenshot.desktop,net.lutris.path-of-building-2.desktop,discord.desktop,github-desktop.desktop,arandr.desktop
+button-title=Menu
+button-icon=distributor-logo-artix
 button-single-row=false
 show-button-title=false
 show-button-icon=true
@@ -9,20 +9,20 @@ launcher-show-name=true
 launcher-show-description=true
 launcher-show-tooltip=false
 launcher-icon-size=1
-hover-switch-category=false
+hover-switch-category=true
 category-show-name=true
-category-icon-size=-1
+category-icon-size=0
 sort-categories=true
 view-mode=1
 default-category=0
 recent-items-max=15
 favorites-in-recent=false
 position-search-alternate=true
-position-commands-alternate=true
+position-commands-alternate=false
 position-categories-alternate=false
 position-categories-horizontal=false
-stay-on-focus-out=false
-profile-shape=2
+stay-on-focus-out=true
+profile-shape=0
 confirm-session-command=true
 menu-width=455
 menu-height=500
@@ -34,7 +34,7 @@ show-command-lockscreen=false
 command-switchuser=dm-tool switch-to-greeter
 show-command-switchuser=false
 command-logoutuser=i3-msg exit
-show-command-logoutuser=true
+show-command-logoutuser=false
 command-restart=sudo reboot
 show-command-restart=true
 command-shutdown=sudo poweroff
@@ -48,7 +48,7 @@ show-command-logout=false
 command-menueditor=menulibre
 show-command-menueditor=false
 command-profile=mugshot
-show-command-profile=false
+show-command-profile=true
 search-actions=6
 
 [action0]
