--- a/config
+++ b/config
@@ -2,7 +2,7 @@
 font pango:Source Code Pro Medium 14
 
 #Autostart
-exec --no-startup-id nitrogen --restore; sleep 1; xcompmgr -f
+exec --no-startup-id nitrogen --restore; sleep 1; picom -b --config $HOME/.config/picom.conf
 exec --no-startup-id /usr/lib/xfce4/notifyd/xfce4-notifyd
 exec --no-startup-id xfce4-panel --disable-wm-check
 exec_always --no-startup-id autotiling
