--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 #i3-Gaps Config
-font pango:Source Code Pro Medium 14
+font pango:FiraCode Nerd Font 14
 
 #Autostart
 exec --no-startup-id nitrogen --restore; sleep 1; picom -b --config $HOME/.config/picom.conf
@@ -118,10 +118,6 @@ bindsym $mod+Right focus right
 
 #Mod+Tab to switch between open workspaces
 bindsym $mod+Tab workspace next
-
-#Manual Tiling
-bindsym $mod+z split v
-bindsym $mod+x split h
 
 #Resize
 bindsym $mod+Ctrl+Right resize shrink width 10 px or 10 ppt
